macOS UI: Rework freetype-rel-fontsize in open panel
"freetype-rel-fontsize" does not exist anymore in 4.0. Rework in open panel --> subtitle sheet.
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Link issues together to show that they're related.
Learn more.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Owner
Remove that.
- Author Maintainer
Same setting is in simple preferences. I believe at least this one should be kept / replaced with the new scale variable.
Not sure if we need it in open panel as well.
- Maintainer
Looks like there is no longer an option to influence the subtitles size? This would be quite bad from an a11y perspective. Do I miss something?
- Felix Paul Kühne assigned to @fkuehne and unassigned @MigrationBot
assigned to @fkuehne and unassigned @MigrationBot
- Maintainer
Fixed.
commit 03d7eefb9b2d7a8578e704ef88fb7b1072cc2ab5 Author: Felix Paul Kühne <felix@feepk.net> Date: Fri Aug 23 12:41:09 2019 +0200 macosx: remove freetype-rel-fontsize options from open panel (closes [#20771](https://code.videolan.org/videolan/vlc/-/issues/20771))
- Felix Paul Kühne added Status::fixed label
added Status::fixed label
- Felix Paul Kühne closed
closed
Please register or sign in to reply