macosx: remove freetype-rel-fontsize options from open panel (closes #20771)